--- a/src/app/topmenu/topmenu.component.scss
+++ b/src/app/topmenu/topmenu.component.scss
@@ -1,3 +1,61 @@
-.menu-content{
-    background-color: #dddddd;
+@import '../styles/helpers/variables.scss';
+@import '../styles/helpers/mixins.scss';
+
+.menu {
+    background-color: $color-white;
+    color: $color-gray;
+    display: flex;
+    border-bottom: solid 1px $color-orange;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem;
+}
+
+.menu__list {
+    background: $color-black;
+    padding: 1rem;
+    line-height: 2rem;
+    @include bp(md){
+        display: none;
+    }    
+}
+
+.menu__list--desktop {
+    display: none;
+    @include bp(md) {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+}
+
+.menu__item {
+    margin-right: 1rem;
+}
+
+.menu__bar {
+    display: inline-block;
+    font-size: 1.5rem;
+    @include bp(md) {
+        display: none;
+    }
+}
+
+.menu__item:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    bottom: 0;
+    top: 1.25rem;
+    left: 0;
+    background-color: $color-orange;
+    visibility: hidden;
+    transform: scaleX(0);
+    transition: all 0.3s ease-in-out 0s;
+}
+
+.menu__item:hover:before {
+    visibility: visible;
+    transform: scaleX(1);
 }
