improved folders structure and implemented home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
-<app-topmenu></app-topmenu>
-<router-outlet></router-outlet> 
+<div class="topmenu-container">
+    <app-topmenu></app-topmenu>
+</div>
+<div class="main-container">
+    <router-outlet></router-outlet> 
+</div>
