--- a/src/app/styles/helpers/variables.scss
+++ b/src/app/styles/helpers/variables.scss
@@ -3,7 +3,7 @@ $font-family: Open Sans, sans-serif;
 
 
 $color-orange: #FF7F00;
-$color-blue: #067FBF;
+$color-blue: rgba(19, 110, 158, 0.86);
 $color-white: #FFF;
 $color-gray : #989999;
 $color-black : #333333;
