--- a/src/app/layout/topmenu/topmenu.component.scss
+++ b/src/app/layout/topmenu/topmenu.component.scss
@@ -1,5 +1,5 @@
-@import '../styles/helpers/variables.scss';
-@import '../styles/helpers/mixins.scss';
+@import '../../styles/helpers/variables.scss';
+@import '../../styles/helpers/mixins.scss';
 
 .menu {
     background-color: $color-white;
@@ -15,6 +15,8 @@
     background: $color-black;
     padding: 1rem;
     line-height: 2rem;
+    z-index: 10;
+    position: relative;
     @include bp(md){
         display: none;
     }    
@@ -47,7 +49,7 @@
     width: 100%;
     height: 2px;
     bottom: 0;
-    top: 1.25rem;
+    top: 1.375rem;
     left: 0;
     background-color: $color-orange;
     visibility: hidden;
