--- a/src/app/styles/helpers/variables.scss
+++ b/src/app/styles/helpers/variables.scss
@@ -3,6 +3,7 @@ $font-family: Open Sans, sans-serif;
 
 
 $color-orange: #FF7F00;
+$color-alt-orange: rgb(248, 153, 57);
 $color-blue: rgba(19, 110, 158, 0.86);
 $color-white: #FFF;
 $color-gray : #989999;
