fixed cards aligment

--- a/src/app/components/programacion/programacion.component.html
+++ b/src/app/components/programacion/programacion.component.html
@@ -15,12 +15,9 @@
         <div class="programation__card">
           <div class="programation__card-content">
             <div class="programation__card-item">
-                <span><b>{{group.name}}</b></span><!--Change this! "teacher is just an example" -->
-                <span>Lunes - Miercoles</span>
-            </div>
-            <div class="programation__card-item programation__card-item--right">
-              <span><b class="programation__card__availability">7/10<i class="fa fa-user programation__card-user"></i></b></span>                
-              <span>8:00 - 9:00</span>
+                <span class="programation__card-name"><b>3B - {{group.name}} {{group.lastName}}</b></span><!--Change this! "teacher is just an example" -->
+                <span class="programation__card-schedule">Lunes - Miercoles 8:00 - 9:00</span>          
+                <span class="programation__card-availability"><b class="programation__card__availability">7/10<i class="fa fa-user programation__card-user"></i></b></span>
             </div>          
           </div>
           <div>
