--- a/src/app/components/programacion/programacion.component.html
+++ b/src/app/components/programacion/programacion.component.html
@@ -6,13 +6,12 @@
       </button>      
   </div>
   
-
   <div *ngIf="isCardsVisible" class="programation">
     <div class="programation__filters"><b>Filters</b></div>
 
     <div class="programation__list"> 
       <ng-container *ngFor="let group of groups">
-        <div class="programation__card">
+        <div class="programation__card"  routerLink="/programacion/{{group.idTeacher}}">
           <div class="programation__card-content">
             <div class="programation__card-item">
                 <span class="programation__card-name"><b>3B - {{group.name}} {{group.lastName}}</b></span><!--Change this! "teacher is just an example" -->
@@ -26,43 +25,5 @@
         </div>
       </ng-container>
     </div>
-
-
-      <!-- <div class="programation__card">
-        
-          <div>
-              <div class="programation__card__item">
-                  <span><b>Nivel 3A - Giomara</b></span>
-                  <span>Lunes - Miercoles</span>
-              </div>
-              <div class="programation__card__item">
-                <span><b class="programation__card__availability">7/10</b></span>                
-                <span>8:00 - 9:00</span>
-              </div>          
-          </div>
-          
-          <div>
-              <i class="fa fa-chevron-right"></i>
-          </div>
-      </div> -->
-
-      <!-- card -->
-      <!-- <div class="programation__card">
-        <div class="programation__card__item">
-          <span><b>Nivel 3A - Giomara</b></span>
-          <span><b class="programation__card__availability">7/10</b></span>
-        </div>
-        <div class="programation__card__item">
-          <span>Lunes - Miercoles</span>
-          <span>8:00 - 9:00</span>
-        </div>
-      </div> -->
-
-         
-      
-    
-
   </div>
-
-
 </div>
