--- a/src/app/styles/helpers/variables.scss
+++ b/src/app/styles/helpers/variables.scss
@@ -7,4 +7,9 @@ $color-alt-orange: rgb(248, 153, 57);
 $color-blue: rgba(19, 110, 158, 0.86);
 $color-white: #FFF;
 $color-gray : #989999;
+$color-lightgray: #ccc;
+$color-alt-lightgray: rgb(235, 235, 235);
 $color-black : #333333;
+
+$color-error : #d32727;
+$color-bckg-error : #f2dede;
