--- a/src/app/styles/helpers/variables.scss
+++ b/src/app/styles/helpers/variables.scss
@@ -10,6 +10,7 @@ $color-gray : #989999;
 $color-lightgray: #ccc;
 $color-alt-lightgray: rgb(235, 235, 235);
 $color-black : #333333;
+$color-red: rgb(231,76,60);
 
 $color-error : #d32727;
 $color-bckg-error : #f2dede;
