--- a/src/app/shared/components/message-box/message-box.component.scss
+++ b/src/app/shared/components/message-box/message-box.component.scss
@@ -1,7 +1,8 @@
 @import '../../../styles/helpers/variables.scss';
+@import '../../../styles/helpers/mixins.scss';
 
 .message-box {
-    width: 80rem;
+    width: 21rem;
     background-color: $color-lightgray;
     height: 2rem;
     display: flex;
@@ -11,6 +12,18 @@
     border-radius: .5rem;
     font-weight: bold;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 15px 0 rgba(0, 0, 0, 0.19);
+    @include bp(md){
+        width: 21rem;
+    }
+    @include bp(lg){
+        width: 55rem;
+    }
+    @include bp(xl){
+        width: 65rem;
+    }
+    @include bp(xl){
+        width: 75rem;
+    }
 }
 
 .message-box--error {
