fixed schedule detail mobile styles

--- a/src/app/components/programationDetail/programationDetail.component.scss
+++ b/src/app/components/programationDetail/programationDetail.component.scss
@@ -37,6 +37,7 @@
     justify-content: space-between;
     background-color: $color-blue;
     padding: 1rem;
+    align-items: baseline;
 }
 
 .schedule__body {
