--- a/src/app/components/programationDetail/programationDetail.component.html
+++ b/src/app/components/programationDetail/programationDetail.component.html
@@ -25,8 +25,8 @@
 
     </div>
     <div class="schedule__footer">
-        <button>Procesar</button>
-        <button class="button-default" routerLink="/programacion">Regresar</button>
+        <button>Save</button>
+        <button class="button-default" routerLink="/programacion">Back</button>
     </div>
   </div>
 </div>
