--- a/src/app/components/programacion/programacion.component.html
+++ b/src/app/components/programacion/programacion.component.html
@@ -3,23 +3,23 @@
       <div class="programation__year">English Classes 2018</div>
       <button (click)="generateCards()" class="programation__groups">{{buttonText}}
           <i *ngIf="isSpinnerVisible" class="fa fa-spinner fa-spin"></i>
-      </button>      
+      </button>
   </div>
-  
+
   <div *ngIf="isCardsVisible" class="programation">
     <div class="programation__filters"><b>Filters</b></div>
 
     <div class="programation__list">
       <app-message-box [message]="message" [type]="messageType" [showMessage]="showMessage"></app-message-box>
       <ng-container *ngFor="let group of groups">
-        <a routerLink="/programacion/{{group.idGroup}}">
+        <a routerLink="/schedule/{{group.idGroup}}">
         <div class="programation__card">
           <div class="programation__card-content">
             <div class="programation__card-item">
                 <span class="programation__card-name"><b>{{group.levelName}} - {{group.teacherName}} {{group.teacherLastName}}</b></span>
-                <span class="programation__card-schedule">{{group.scheduleDescription}} {{group.formattedStartHour}} - {{group.formattedEndHour}}</span>          
+                <span class="programation__card-schedule">{{group.scheduleDescription}} {{group.formattedStartHour}} - {{group.formattedEndHour}}</span>
                 <span class="programation__card-availability"><b class="programation__card__availability">{{group.students}}/10<i class="fa fa-user programation__card-user"></i></b></span>
-            </div>          
+            </div>
           </div>
           <div>
             <i class="fa fa-chevron-right"></i>
