implemented pre-inscriptio student page

--- a/src/app/shared/components/message-box/message-box.component.scss
+++ b/src/app/shared/components/message-box/message-box.component.scss
@@ -30,3 +30,8 @@
     color: $color-error;
     background-color: $color-bckg-error;
 }
+
+.message-box--success {
+    color: $color-green;
+    background-color: $color-bckg-green;
+}
