--- a/src/app/styles/helpers/variables.scss
+++ b/src/app/styles/helpers/variables.scss
@@ -10,7 +10,9 @@ $color-gray : #989999;
 $color-lightgray: #ccc;
 $color-alt-lightgray: rgb(235, 235, 235);
 $color-black : #333333;
-$color-red: rgb(231,76,60);
 
+$color-red: rgb(231,76,60);
+$color-green : #3c763d;
+$color-bckg-green : #dff0d8;
 $color-error : #d32727;
 $color-bckg-error : #f2dede;
