--- a/src/app/styles/base/site.scss
+++ b/src/app/styles/base/site.scss
@@ -22,12 +22,22 @@ a {
 }
 
 button {
+    display: block;
+    width: 100%;
+    margin-bottom: 0.5rem;
     background: $color-orange;
     border: 0;
     padding: 0.5rem 1rem;
     border-radius: 0.5rem;
     color: $color-white;
-    outline: 0;
+    outline: 0;  
+
+    @include bp(md){
+        display: inline-block;
+        margin-bottom: 0;
+        width: 10%;
+    }
+
     &:hover {
         background-color: $color-alt-orange;
     }
