fixed shedule service

--- a/src/app/components/teacherPreInscription/teacherPreInscription.component.html
+++ b/src/app/components/teacherPreInscription/teacherPreInscription.component.html
@@ -6,6 +6,7 @@
   <div class="teacher-pre-inscription__content" *ngIf="!showMessage">
     <div>
       <div class="teacher-pre-inscription__schedule">
+        <b>Select Schedule:</b>
         <div>
             <input type="checkbox">
             <span>Monday - Wednesday</span>
@@ -36,6 +37,10 @@
             <span>Tuesday - Thursday</span>
             <span>17:00 - 18:30</span>            
         </div>
+      </div>
+
+      <div>
+        <b>Select your level preferences</b>
       </div>
 
     </div>
