--- a/src/app/styles/helpers/variables.scss
+++ b/src/app/styles/helpers/variables.scss
@@ -16,3 +16,4 @@ $color-green : #3c763d;
 $color-bckg-green : #dff0d8;
 $color-error : #d32727;
 $color-bckg-error : #f2dede;
+$color-alt-red : rgba(191, 0, 0, 0.8);
