--- a/src/app/layout/topmenu/topmenu.component.html
+++ b/src/app/layout/topmenu/topmenu.component.html
@@ -1,16 +1,36 @@
 <div class="menu">
   <img src="../../assets/imagenes/Belatrix.png" alt="belatrixLogo">
   <i class="fa fa-bars menu__bar" (click)="toogleMobileMenu()"></i>
-  <ul class="menu__list--desktop">
-  <li><a class="menu__item" routerLink="/home">Home</a></li>
-  <li><a class="menu__item" routerLink="/schedule">Programation</a></li>
-  <li><a class="menu__item" routerLink="/assistance">Assistance</a></li>
-  <li><a class="menu__item" routerLink="/history">History</a></li>
-</ul>
+  <ng-container *ngIf="userLogged">
+    <ul class="menu__list--desktop">
+      <li><a class="menu__item" routerLink="/home">Home</a></li>
+      <ng-container *ngIf="isAdmin">
+        <li><a class="menu__item" routerLink="/schedule">Programation</a></li>
+        <li><a class="menu__item" routerLink="/assistance">Assistance</a></li>
+        <li><a class="menu__item" routerLink="/history">History</a></li>
+      </ng-container>
+      <ng-container *ngIf="isStudent">
+        <li><a class="menu__item" routerLink="/pre-inscription/student">Pre-Inscription</a></li>
+      </ng-container>
+      <ng-container *ngIf="isTeacher">
+        <li><a class="menu__item" routerLink="/pre-inscription/teacher">Pre-Inscription</a></li>
+      </ng-container>
+      <li><a class="menu__item" (click)="logout()">Logout</a></li>
+    </ul>
+    <ul class="menu__list" [@navbarState]="state">
+      <li (click)="navigate('/home')"><a>Home</a></li>
+      <ng-container *ngIf="isAdmin">
+        <li (click)="navigate('/schedule')"><a>Programation</a></li>
+        <li (click)="navigate('/assistance')"><a >Assistance</a></li>
+        <li (click)="navigate('/history')"><a >History</a></li>
+      </ng-container>
+      <ng-container *ngIf="isStudent">
+        <li><a class="menu__item" routerLink="/pre-inscription/student">Pre-Inscription</a></li>
+      </ng-container>
+      <ng-container *ngIf="isTeacher">
+        <li><a class="menu__item" routerLink="/pre-inscription/teacher">Pre-Inscription</a></li>
+      </ng-container>
+      <li><a class="menu__item" (click)="logout()">Logout</a></li>
+    </ul>
+  </ng-container>
 </div>
-<ul class="menu__list" [@navbarState]="state">
-  <li (click)="navigate('/home')"><a>Home</a></li>
-  <li (click)="navigate('/schedule')"><a>Programation</a></li>
-  <li (click)="navigate('/assistance')"><a >Assistance</a></li>
-  <li (click)="navigate('/history')"><a >History</a></li>
-</ul>
