filter section added

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,11 +1,11 @@
 <div class="login-container">
   <div class="login-form">
     <div class="login-item">
-      <input class="login-item__input" type="text" [(ngModel)]="user.username"/>
+      <input class="login-item__input input-text" type="text" [(ngModel)]="user.username"/>
       <label for="">Username</label>
     </div>
     <div class="login-item">
-      <input class="login-item__input" type="password" [(ngModel)]="user.password"/>
+      <input class="login-item__input input-text" type="password" [(ngModel)]="user.password"/>
       <label for="">Password</label>
     </div>    
     <div class="login-item">
