--- a/src/app/components/programacion/programacion.component.html
+++ b/src/app/components/programacion/programacion.component.html
@@ -7,7 +7,32 @@
   </div>
 
   <div *ngIf="isCardsVisible" class="programation">
-    <div class="programation__filters"><b>Filters</b></div>
+    <div class="programation__filters filter-box">
+        <div class="filter-box__header filter-box__item">
+          <b>Filters</b>
+          <hr>
+        </div>
+        <div class="filter-box__item">
+          <label>Teacher:</label>
+          <input type="text" class="input-text">
+        </div>
+        <div class="filter-box__item">
+          <label>Class level:</label>
+          <input type="text" class="input-text">
+        </div>
+        <div class="filter-box__item">
+          <label>Class day:</label>
+          <select class="select">
+            <option value="0">Select one</option>
+            <option value="1">Monday - Wednesday</option>
+            <option value="2">Tuesday - Thursday</option>
+          </select>
+        </div>
+        <div class="filter-box__buttons filter-box__item">
+          <button>Apply</button>
+          <button class="button-default">Reset</button>
+        </div>
+    </div>
 
     <div class="programation__list">
       <app-message-box [message]="message" [type]="messageType" [showMessage]="showMessage"></app-message-box>
