--- a/src/app/components/programacion/programacion.component.scss
+++ b/src/app/components/programacion/programacion.component.scss
@@ -43,7 +43,7 @@
     color: $color-white;
     background: $color-blue;
     text-align: left;
-    padding: 1rem;
+    padding: 2rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 3px 15px 0 rgba(0, 0, 0, 0.19);
     @include bp(lg){
         border-radius: 0.5rem;
@@ -53,6 +53,52 @@
         margin-top: 1rem;
         min-height: 25rem;
     }
+}
+
+.programation__filters.filter-box {
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+}
+.filter-box__header {
+    margin-bottom: 1rem;
+}
+.filter-box__item {
+    margin-bottom: 1rem;
+}
+.input-text{
+    border-bottom: 1px solid $color-white;
+    background: 0;
+    &:focus{
+        outline: none;
+    }
+}
+.select{
+    background: 0;
+    width: 210px;
+    border-bottom: 1px solid;
+    margin-top: 10px;
+    border-radius: .5rem;
+    &:focus{
+        outline: none;
+    }
+}
+label{
+    display: block;
+}
+option{
+    color: $color-black;
+}
+.filter-box__buttons{
+    margin-top: auto;
+    margin-bottom: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+button{
+    width: 100px;
 }
 
 .programation__list {
